--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3302/spring_web_blog
 spring.datasource.username=root
 spring.datasource.password=root
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.show-sql= true
+#spring.jpa.show-sql: true
